# fillalpha

./: .gitignore  CMakeLists.txt  README.md
src/: Image.cpp  Image.hpp  main.cpp
test/: test.py
